--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.9",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
