--- a/package.json
+++ b/package.json
@@ -117,11 +117,13 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "react-datepicker": "^4.16.0",
+    "react-day-picker": "^8.8.2",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.0.2",
