Adding workflow package config

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": false,
   "version": "1.0.0",
   "type": "module",
+  "publishConfig": {
+    "@johnnyferreiradev:registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
