--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-@johnnyferreiradev:registry=https://npm.pkg.github.com
+# @johnnyferreiradev:registry=https://npm.pkg.github.com
+registry=https://npm.pkg.github.com/johnnyferreiradev
+//npm.pkg.github.com/:_authToken=readWriteDeleteToken
