--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,1 @@
-# @johnnyferreiradev:registry=https://npm.pkg.github.com
-registry=https://npm.pkg.github.com/johnnyferreiradev
-//npm.pkg.github.com/:_authToken=readWriteDeleteToken
+@johnnyferreiradev:registry=https://npm.pkg.github.com
