--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "@johnnyferreiradev/artemis-ui",
   "private": false,
-  "version": "1.0.8",
+  "version": "1.0.9",
   "type": "module",
   "publishConfig": {
     "@johnnyferreiradev:registry": "https://registry.npmjs.org"
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "prepare": "shx rm -rf dist && tsc && vite build",
-    "prepack": "yarn build",
-    "postpack": "shx rm -rf src public",
+    "build": "tsup src/lib/index.ts --format cjs,esm --dts",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{jsx,ts,tsx}'",
@@ -35,9 +32,9 @@
     },
     "./dist/style.css": "./dist/style.css"
   },
-  "main": "site.zip/path/to/entry/point.js",
-  "module": "./dist/artemis.es.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@storybook/addon-essentials": "^7.4.2",
     "@storybook/addon-interactions": "^7.4.2",
@@ -82,6 +79,7 @@
     "storybook": "^7.4.2",
     "storybook-tailwind-dark-mode": "1.0.22",
     "tailwindcss": "^3.3.3",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
     "vite-plugin-dts": "^3.3.1",
