--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@johnnyferreiradev/artemis-ui",
   "private": false,
-  "version": "1.0.9",
+  "version": "1.0.10",
   "type": "module",
   "publishConfig": {
     "@johnnyferreiradev:registry": "https://registry.npmjs.org"
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsup src/lib/index.ts --format cjs,esm --dts",
+    "prepare": "yarn build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{jsx,ts,tsx}'",
