--- a/package.json
+++ b/package.json
@@ -1,40 +1,51 @@
 {
-  "name": "@johnnyferreiradev/artemis-ui",
+  "name": "artemis-ui",
   "private": false,
-  "version": "1.0.11",
+  "version": "1.0.0",
   "type": "module",
   "publishConfig": {
     "@johnnyferreiradev:registry": "https://registry.npmjs.org"
   },
+  "files": [
+    "dist/*"
+  ],
+  "types": "dist/index.d.ts",
+  "style": "dist/index.css",
+  "main": "src/index.js",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/index.d.ts"
+      ]
+    }
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs.js"
+    },
+    "./styles.css": {
+      "import": "./dist/index.css",
+      "require": "./dist/index.css"
+    },
+    "./locales": {
+      "import": "./dist/locales/index.esm.js",
+      "types": "./dist/locales/index.d.ts",
+      "require": "./dist/locales/index.cjs.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/lib/index.ts --format cjs,esm --dts",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{jsx,ts,tsx}'",
-    "format": "prettier --write src//**/*.{ts,tsx,css} --config ./.prettierrc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup && npm run tailwind --minify -o ./dist/index.css",
+    "tailwind": "npx tailwindcss -i ./src/lib/styles.css -o ./dist/index.css",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "yarn  eslint",
-      "yarn  format"
-    ]
-  },
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "import": "./dist/artemis.es.js",
-      "require": "./dist/artemis.umd.js"
-    },
-    "./dist/style.css": "./dist/style.css"
-  },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
   "devDependencies": {
     "@storybook/addon-essentials": "^7.4.2",
     "@storybook/addon-interactions": "^7.4.2",
@@ -74,8 +85,6 @@
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.27.2",
-    "rollup-plugin-i18next-conv": "8.0.0",
     "storybook": "^7.4.2",
     "storybook-tailwind-dark-mode": "1.0.22",
     "tailwindcss": "^3.3.3",
@@ -85,10 +94,6 @@
     "vite-plugin-dts": "^3.3.1",
     "vite-plugin-linter": "^2.0.2",
     "vite-tsconfig-paths": "^4.2.0"
-  },
-  "peerDependencies": {
-    "react": "16.8.0 || >=17.x",
-    "react-dom": "16.8.0 || >=17.x"
   },
   "resolutions": {
     "jackspeak": "2.1.1"
@@ -129,9 +134,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.0.2",
-    "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
-    "shx": "^0.3.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
     "zod": "^3.22.2"
