--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
